--- a/src/biz.dfch.CS.Appclusive.Scheduler/App.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler/App.config
@@ -12,11 +12,32 @@
     <!--<add key="ServiceName" value="ManamgementUriName"/>-->
     <add key="ManagementUri" value="biz.dfch.CS.Appclusive.Scheduler" />
     <!--<add key="Uri" value="http://appclusive"/>-->
-    <add key="Uri" value="http://localhost:53422" />
+    <!--<add key="Uri" value="http://localhost:53422" />-->
+    <add key="Uri" value="http://172.19.115.33/Appclusive/" />
   </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-     </assemblyBinding>
+       <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.7.0.0" newVersion="5.7.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-8.0.0.0" newVersion="8.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.2.15.0" newVersion="1.2.15.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.Services.Client" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.7.0.0" newVersion="5.7.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Data.Edm" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.7.0.0" newVersion="5.7.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
   </runtime>
 	<log4net>
 		<!-- Define some output appenders -->
