--- a/src/biz.dfch.CS.Appclusive.Scheduler/biz.dfch.CS.Appclusive.Scheduler.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler/biz.dfch.CS.Appclusive.Scheduler.csproj
@@ -11,7 +11,7 @@
     <AssemblyName>biz.dfch.CS.Appclusive.Scheduler</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <CodeContractsAssemblyMode>0</CodeContractsAssemblyMode>
+    <CodeContractsAssemblyMode>1</CodeContractsAssemblyMode>
     <NuGetPackageImportStamp>a2fb6cf6</NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -180,6 +180,9 @@
     <Compile Include="AppclusiveSchedulerService.Designer.cs">
       <DependentUpon>AppclusiveSchedulerService.cs</DependentUpon>
     </Compile>
+    <Compile Include="SchedulerPluginCore.cs" />
+    <Compile Include="ISchedulerPluginCore.cs" />
+    <Compile Include="ContractClassForISchedulerPluginCore.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
     </Compile>
