--- a/src/biz.dfch.CS.Appclusive.Scheduler.Public.Tests/biz.dfch.CS.Appclusive.Scheduler.Public.Tests.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Public.Tests/biz.dfch.CS.Appclusive.Scheduler.Public.Tests.csproj
@@ -135,6 +135,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="Telerik.JustMock">
       <HintPath>../JustMock/Telerik.JustMock.dll</HintPath>
     </Reference>
@@ -152,6 +153,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="IConfigurationLoaderTest.cs" />
     <Compile Include="ISchedulerPluginTest.cs" />
     <Compile Include="CodeContractTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
