--- a/src/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests.csproj
@@ -155,6 +155,7 @@
     <Compile Include="ISchedulerPluginTest.cs" />
     <Compile Include="CodeContractTest.cs" />
     <Compile Include="DefaultPluginTest.cs" />
+    <Compile Include="ProgrammePluginTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
