--- a/src/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests.csproj
@@ -159,6 +159,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\biz.dfch.CS.Appclusive.Scheduler.Public.Tests\biz.dfch.CS.Appclusive.Scheduler.Public.Tests.csproj">
+      <Project>{623eca49-601b-42f2-b37e-db300106db96}</Project>
+      <Name>biz.dfch.CS.Appclusive.Scheduler.Public.Tests</Name>
+    </ProjectReference>
     <ProjectReference Include="..\biz.dfch.CS.Appclusive.Scheduler.Public\biz.dfch.CS.Appclusive.Scheduler.Public.csproj">
       <Project>{f3e50a54-395d-4e02-bde6-edea3c3cf578}</Project>
       <Name>biz.dfch.CS.Appclusive.Scheduler.Public</Name>
