--- a/src/biz.dfch.CS.Appclusive.Scheduler.Public/biz.dfch.CS.Appclusive.Scheduler.Public.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Public/biz.dfch.CS.Appclusive.Scheduler.Public.csproj
@@ -132,7 +132,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseDto.cs" />
-    <Compile Include="SchedulerPluginParameters.cs" />
+    <Compile Include="DictionaryParameters.cs" />
     <Compile Include="IConfigurationLoader.cs" />
     <Compile Include="ContractClassForIConfigurationLoader.cs" />
     <Compile Include="JobResult.cs" />
