--- a/src/biz.dfch.CS.Appclusive.Scheduler.Public/biz.dfch.CS.Appclusive.Scheduler.Public.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Public/biz.dfch.CS.Appclusive.Scheduler.Public.csproj
@@ -132,6 +132,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseDto.cs" />
+    <Compile Include="ContractClassForILogger.cs" />
+    <Compile Include="ILogger.cs" />
     <Compile Include="DictionaryParameters.cs" />
     <Compile Include="IConfigurationLoader.cs" />
     <Compile Include="ContractClassForIConfigurationLoader.cs" />
