--- a/src/biz.dfch.CS.Appclusive.Scheduler.Extensions/biz.dfch.CS.Appclusive.Scheduler.Extensions.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Extensions/biz.dfch.CS.Appclusive.Scheduler.Extensions.csproj
@@ -144,6 +144,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ProgrammePluginConfiguration.cs" />
     <Compile Include="ProgrammePluginInvokeParameters.cs" />
     <Compile Include="ProgrammePlugin.cs" />
     <Compile Include="DefaultPlugin.cs" />
