--- a/src/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests.csproj
@@ -159,6 +159,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\biz.dfch.CS.Appclusive.Scheduler.Core\biz.dfch.CS.Appclusive.Scheduler.Core.csproj">
+      <Project>{ED3CBDAE-82B0-43EA-BE69-B0CAD148A209}</Project>
+      <Name>biz.dfch.CS.Appclusive.Scheduler.Core</Name>
+    </ProjectReference>
     <ProjectReference Include="..\biz.dfch.CS.Appclusive.Scheduler.Public.Tests\biz.dfch.CS.Appclusive.Scheduler.Public.Tests.csproj">
       <Project>{623eca49-601b-42f2-b37e-db300106db96}</Project>
       <Name>biz.dfch.CS.Appclusive.Scheduler.Public.Tests</Name>
