--- a/src/biz.dfch.CS.Appclusive.Scheduler.Public.Tests/biz.dfch.CS.Appclusive.Scheduler.Public.Tests.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Public.Tests/biz.dfch.CS.Appclusive.Scheduler.Public.Tests.csproj
@@ -153,6 +153,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DictionaryParametersTest.cs" />
     <Compile Include="ILoggerTest.cs" />
     <Compile Include="InvalidObject.cs" />
     <Compile Include="IConfigurationLoaderTest.cs" />
