--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/biz.dfch.CS.Appclusive.Scheduler.Core.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/biz.dfch.CS.Appclusive.Scheduler.Core.csproj
@@ -153,6 +153,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Configuration.Install" />
@@ -180,7 +181,10 @@
     <Compile Include="AppclusiveSchedulerService.Designer.cs">
       <DependentUpon>AppclusiveSchedulerService.cs</DependentUpon>
     </Compile>
+    <Compile Include="PluginLoaderConfigurationFromAppSettingsLoader.cs" />
+    <Compile Include="PluginLoader.cs" />
     <Compile Include="Logger.cs" />
+    <Compile Include="PluginLoaderConfiguration.cs" />
     <Compile Include="ScheduledTaskWorkerConfigurationLoader.cs" />
     <Compile Include="ScheduledTaskWorkerConfiguration.cs" />
     <Compile Include="ProjectInstaller.cs">
