--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/biz.dfch.CS.Appclusive.Scheduler.Core.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/biz.dfch.CS.Appclusive.Scheduler.Core.csproj
@@ -181,6 +181,7 @@
     <Compile Include="AppclusiveSchedulerService.Designer.cs">
       <DependentUpon>AppclusiveSchedulerService.cs</DependentUpon>
     </Compile>
+    <Compile Include="DefaultPlugin.cs" />
     <Compile Include="PluginLoaderConfigurationFromAppSettingsLoader.cs" />
     <Compile Include="PluginLoader.cs" />
     <Compile Include="Logger.cs" />
