--- a/src/biz.dfch.CS.Appclusive.Scheduler.Public/biz.dfch.CS.Appclusive.Scheduler.Public.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Public/biz.dfch.CS.Appclusive.Scheduler.Public.csproj
@@ -122,6 +122,7 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -133,7 +134,7 @@
   <ItemGroup>
     <Compile Include="AppclusivePluginBase.cs" />
     <Compile Include="BaseDto.cs" />
-    <Compile Include="AppSettings.cs" />
+    <Compile Include="SchedulerAppSettings.cs" />
     <Compile Include="ContractClassForIAppclusivePlugin.cs" />
     <Compile Include="IAppclusivePlugin.cs" />
     <Compile Include="IAppclusivePluginData.cs" />
@@ -148,6 +149,8 @@
     <Compile Include="IConfigurationLoader.cs" />
     <Compile Include="ContractClassForIConfigurationLoader.cs" />
     <Compile Include="JobResult.cs" />
+    <Compile Include="PluginLoader.cs" />
+    <Compile Include="PluginLoaderConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SchedulerPluginBase.cs" />
   </ItemGroup>
