--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core.Tests/packages.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core.Tests/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="biz.dfch.CS.Appclusive.Public" version="2.8.3" targetFramework="net46" />
   <package id="biz.dfch.CS.System.Utilities" version="2.0.0" targetFramework="net45" />
   <package id="log4net" version="2.0.5" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net46" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" />
 </packages>
