--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
@@ -4,7 +4,7 @@
     <section name="log4net" type="System.Configuration.IgnoreSectionHandler" />
   </configSections>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
   <appSettings>
     <add key="UpdateIntervalMinutes" value="5" />
@@ -49,8 +49,8 @@
 			<rollingStyle value="Size" />
 			<staticLogFileName value="true" />
 			<layout type="log4net.Layout.PatternLayout">
-				<header value="[Header]&#xD;&#xA;" />
-				<footer value="[Footer]&#xD;&#xA;" />
+				<header value="[Header] " />
+				<footer value="[Footer] " />
 				<conversionPattern value="%date [%thread] %-5level %logger [%ndc] - %message%newline" />
 			</layout>
 		</appender>
@@ -62,8 +62,8 @@
 			<!-- An alternate output encoding can be specified -->
 			<!-- <encoding value="unicodeFFFE" /> -->
 			<layout type="log4net.Layout.PatternLayout">
-				<header value="[Header]&#xD;&#xA;" />
-				<footer value="[Footer]&#xD;&#xA;" />
+				<header value="[Header] " />
+				<footer value="[Footer] " />
 				<conversionPattern value="%date [%thread] %-5level %logger [%ndc] &lt;%property{auth}&gt; - %message%newline" />
 			</layout>
 			<!-- Alternate layout using XML			
@@ -71,8 +71,8 @@
 		</appender>
     <appender name="DebugAppender" type="log4net.Appender.DebugAppender">
       <layout type="log4net.Layout.PatternLayout">
-        <header value="[Header]&#xD;&#xA;" />
-        <footer value="[Footer]&#xD;&#xA;" />
+        <header value="[Header] " />
+        <footer value="[Footer] " />
         <conversionPattern value="[%thread] %-5level %logger [%ndc] &lt;%property{auth}&gt; - %message%newline" />
       </layout>
       <!-- Alternate layout using XML			
