--- a/src/biz.dfch.CS.Appclusive.Scheduler.Public/packages.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Public/packages.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="biz.dfch.CS.Appclusive.Public" version="2.8.3" targetFramework="net46" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net46" />
+  <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
 </packages>
