--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core.Tests/biz.dfch.CS.Appclusive.Scheduler.Core.Tests.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core.Tests/biz.dfch.CS.Appclusive.Scheduler.Core.Tests.csproj
@@ -189,6 +189,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AppclusiveEndpointsTest.cs" />
     <Compile Include="DefaultPluginTest.cs" />
     <Compile Include="PluginLoaderConfigurationFromAppSettingsLoaderTest.cs" />
     <Compile Include="ScheduledJobsManagerTest.cs" />
