--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
@@ -2,7 +2,13 @@
 <configuration>
   <configSections>
     <section name="log4net" type="System.Configuration.IgnoreSectionHandler" />
-  </configSections>
+    <section 
+      name="AppclusiveCredential"
+      type="biz.dfch.CS.Appclusive.Scheduler.Public.AppclusiveCredentialSection, biz.dfch.CS.Appclusive.Scheduler.Public"
+      allowLocation="true"
+      allowDefinition="Everywhere"
+      />
+    </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
   </startup>
@@ -39,7 +45,13 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-	<log4net>
+  <AppclusiveCredential
+    username = "Administrator"
+    password = "P@ssw0rd"
+    domain = "."
+    >
+  </AppclusiveCredential>
+  <log4net>
 		<!-- Define some output appenders -->
 		<appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
 			<file value="rolling-log.txt" />
