--- a/src/biz.dfch.CS.Appclusive.Scheduler.Public.Tests/biz.dfch.CS.Appclusive.Scheduler.Public.Tests.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Public.Tests/biz.dfch.CS.Appclusive.Scheduler.Public.Tests.csproj
@@ -143,6 +143,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Net.Http.Formatting, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\biz.dfch.CS.Appclusive.Public.2.8.3\lib\System.Net.Http.Formatting.dll</HintPath>
       <Private>True</Private>
@@ -168,6 +169,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ConfigSectionManagerTest.cs" />
     <Compile Include="ILoggerTest.cs" />
     <Compile Include="InvalidObject.cs" />
     <Compile Include="ISchedulerPluginTest.cs" />
