--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core/App.config
@@ -67,7 +67,7 @@
 			</layout>
 		</appender>
 		<appender name="LogFileAppender" type="log4net.Appender.FileAppender">
-			<file value="log-file.txt" />
+			<file value="${TMP}\AppclusiveScheduler.log" />
 			<!-- Example using environment variables in params -->
 			<!-- <file value="${TMP}\log-file.txt" /> -->
 			<appendToFile value="true" />
