--- a/src/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests.csproj
@@ -166,6 +166,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ActivitiPluginConfigurationTest.cs" />
+    <Compile Include="ActivitiPluginTest.cs" />
     <Compile Include="PowerShellScriptPluginConfigurationTest.cs" />
     <Compile Include="PowerShellScriptPluginTest.cs" />
     <Compile Include="ISchedulerPluginTest.cs" />
