--- a/src/biz.dfch.CS.Appclusive.Scheduler.Core.Tests/biz.dfch.CS.Appclusive.Scheduler.Core.Tests.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Core.Tests/biz.dfch.CS.Appclusive.Scheduler.Core.Tests.csproj
@@ -203,6 +203,7 @@
     <Compile Include="ISchedulerPluginTest.cs" />
     <Compile Include="CodeContractTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScheduledTaskWorkerTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\biz.dfch.CS.Appclusive.Scheduler.Public\biz.dfch.CS.Appclusive.Scheduler.Public.csproj">
