--- a/src/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests/biz.dfch.CS.Appclusive.Scheduler.Extensions.Tests.csproj
@@ -178,6 +178,7 @@
     <Compile Include="ActivitiPluginConfigurationManagerTest.cs" />
     <Compile Include="ActivitiPluginConfigurationTest.cs" />
     <Compile Include="ActivitiPluginTest.cs" />
+    <Compile Include="PowerShellScriptPluginConfigurationManagerTest.cs" />
     <Compile Include="PowerShellScriptPluginConfigurationTest.cs" />
     <Compile Include="PowerShellScriptPluginTest.cs" />
     <Compile Include="ISchedulerPluginTest.cs" />
