--- a/src/biz.dfch.CS.Appclusive.Scheduler.Public/biz.dfch.CS.Appclusive.Scheduler.Public.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Public/biz.dfch.CS.Appclusive.Scheduler.Public.csproj
@@ -189,6 +189,7 @@
     <Compile Include="JobResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SchedulerPluginBase.cs" />
+    <Compile Include="SchedulerPluginBaseInvokeParameters.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
