--- a/src/biz.dfch.CS.Appclusive.Scheduler.Extensions/biz.dfch.CS.Appclusive.Scheduler.Extensions.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Extensions/biz.dfch.CS.Appclusive.Scheduler.Extensions.csproj
@@ -118,6 +118,9 @@
     <CodeContractsReferenceAssembly>Build</CodeContractsReferenceAssembly>
     <CodeContractsAnalysisWarningLevel>0</CodeContractsAnalysisWarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>logo.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="biz.dfch.CS.Activiti.Client, Version=1.1.1.22802, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\biz.dfch.CS.Activiti.Client.1.1.1\lib\biz.dfch.CS.Activiti.Client.dll</HintPath>
@@ -212,6 +215,9 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="logo.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets" Condition="Exists('..\packages\Microsoft.Bcl.Build.1.0.21\build\Microsoft.Bcl.Build.targets')" />
