--- a/src/biz.dfch.CS.Appclusive.Scheduler.Public.Tests/biz.dfch.CS.Appclusive.Scheduler.Public.Tests.csproj
+++ b/src/biz.dfch.CS.Appclusive.Scheduler.Public.Tests/biz.dfch.CS.Appclusive.Scheduler.Public.Tests.csproj
@@ -193,6 +193,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AppclusiveCredentialSectionTest.cs" />
     <Compile Include="AppclusiveEndpointsTest.cs" />
     <Compile Include="ConfigSectionManagerTest.cs" />
     <Compile Include="ILoggerTest.cs" />
